2.2.2/_sources/gallery/pie_and_polar_charts/polar_scatter.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pie_and_polar_charts_polar_scatter.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pie_and_polar_charts_polar_scatter.py:


==========================
Scatter plot on polar axis
==========================

Size increases radially in this example and color increases with angle
(just to verify the symbols are being scattered correctly).



.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt


    # Fixing random state for reproducibility
    np.random.seed(19680801)

    # Compute areas and colors
    N = 150
    r = 2 * np.random.rand(N)
    theta = 2 * np.pi * np.random.rand(N)
    area = 200 * r**2
    colors = theta

    fig = plt.figure()
    ax = fig.add_subplot(111, projection='polar')
    c = ax.scatter(theta, r, c=colors, s=area, cmap='hsv', alpha=0.75)




.. image:: /gallery/pie_and_polar_charts/images/sphx_glr_polar_scatter_001.png
    :class: sphx-glr-single-img




Scatter plot on polar axis, with offset origin
----------------------------------------------

The main difference with the previous plot is the configuration of the origin
radius, producing an annulus. Additionally, the theta zero location is set to
rotate the plot.



.. code-block:: python


    fig = plt.figure()
    ax = fig.add_subplot(111, polar=True)
    c = ax.scatter(theta, r, c=colors, s=area, cmap='hsv', alpha=0.75)

    ax.set_rorigin(-2.5)
    ax.set_theta_zero_location('W', offset=10)




.. image:: /gallery/pie_and_polar_charts/images/sphx_glr_polar_scatter_002.png
    :class: sphx-glr-single-img




Scatter plot on polar axis confined to a sector
-----------------------------------------------

The main difference with the previous plots is the configuration of the
theta start and end limits, producing a sector instead of a full circle.



.. code-block:: python


    fig = plt.figure()
    ax = fig.add_subplot(111, polar=True)
    c = ax.scatter(theta, r, c=colors, s=area, cmap='hsv', alpha=0.75)

    ax.set_thetamin(45)
    ax.set_thetamax(135)

    plt.show()



.. image:: /gallery/pie_and_polar_charts/images/sphx_glr_polar_scatter_003.png
    :class: sphx-glr-single-img





.. _sphx_glr_download_gallery_pie_and_polar_charts_polar_scatter.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: polar_scatter.py <polar_scatter.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: polar_scatter.ipynb <polar_scatter.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
